css: pivot table dialog separator fix
vertical separator was overlapping other widgets

can be found in: Calc -> Insert -> Pivot Table -> next

--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -1882,3 +1882,8 @@ kbd,
 #modal-dialog-online-help-content-box {
 	min-width: 75%;
 }
+
+/* Calc -> Insert -> Pivot Table */
+#PivotTableLayout #box2 {
+	grid-gap: 12px; /* make space for vertical separator */
+}
